style.css
body{
    font-family: sans-serif;
    user-select: none;
    margin: 0px
}

.container{
    position: absolute;
    width: 400px;
    margin-left: -200px;
    left: 50%;
    height: auto;
}

#toast_container{
    position: fixed;
    height: auto;
    width: 92%;
    padding: 30px 4% 30px 4%;
    bottom: -25%;
    background: rgb(0, 204, 156);
    box-shadow: 0px 0px 15px rgba(20,80,20,0.4);
    transition-duration: 0.3s;
    border-radius: 20px 20px 0px 0px;
    font-weight: bold;
    color: white;
    z-index: 100;
    font-size: 18px;
    line-height: 25px;
    text-align: center;
}

.modal_container{
    position: fixed;
    background-color: white;
    height: 100%;
    overflow-y: scroll;
    display: none;
    z-index: 10;
}

.modal_title{
    width: 100%;
    font-size: 40px;
    margin: 20px 0px 20px 0px;
    color: rgb(3, 145, 111);
    font-weight: bold;
}

.modal_subtitle{
    width: 100%;
    font-size: 20px;
    margin: 10px 0px 10px 0px;
    color: rgb(2, 172, 132);
    font-weight: bold;
}

.modal_text{
    color: rgb(50,50,50);
    font-size: 20px;
    line-height: 30px;
}

#stats_gameover_container{
    padding-bottom: 10px;
    display: none;
}

@media only screen and (max-width: 600px) {
    .container {
        width: 90%;
        margin-left: 5%;
        left: 0;
    }
}

.header{
    width: 100%;
    height: 60px;
    padding-bottom: 20px;
    margin: 20px 0px 20px 0px;
    font-weight: 800;
    font-size: 60px;
    line-height: 60px;
    text-align: left;
    color: rgb(2, 172, 132);
    border-bottom: 1px solid rgb(230, 230, 230);
}

.header_button{
    float: right;
    margin-left: 15px;
    height: 60px;
    font-size: 24px;
    text-align: right;
    right: 0px;
    color: rgb(2, 172, 132);
    cursor: pointer;
}

#scale_container{
    position: relative;
	width: 100%;
    padding-top: 100%;
    margin-bottom: 20px;
}

#grid_container{
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background-color: rgb(230,230,230);
    color: rgb(50,50,50);
    font-weight: bold;
    font-size: 22px;
    box-sizing:border-box;
    border: 3px solid rgb(230,230,230);
    border-radius: 8px;
}

.tile{
    height: 16.666666%;
    width: 16.666666%;
    background: rgb(250,250,250);
    box-sizing:border-box;
    border: 3px solid rgb(230,230,230);
    cursor: pointer;
    transition-duration: 0.15s;
    border-radius: 8px;
    float: left;
    display: flex;
    align-items: center;
    justify-content: center;
}

#btn_container{
    width: 100%;
    height: 60px;
    margin-bottom: 20px;
}

.btn{
    height: 60px;
    line-height: 60px;
    font-size: 22px;
    font-weight: bold;
    cursor: pointer;
    text-align: center;
    border-radius: 8px;
    letter-spacing: 1px;
    transition-duration: 0.15s;
}

.btn-primary{
    background-color: rgb(0, 204, 156);
    color: white;
}

.btn-secondary{
    box-sizing:border-box;
    border: 6px solid rgb(0, 204, 156);
    color: rgb(0, 204, 156);
    line-height: 48px;
}

.btn-primary:active{
    background-color: rgb(2, 172, 132);
}

.btn-secondary:active{
    color: rgb(2, 172, 132);
    border-color: rgb(2, 172, 132);
}

#submit_button{
    float:right;
    width: 45%;
}

#clear_button{
    float: left;
    width: 45%;
}

sub{
    color: rgba(20,20,20,0.5);
    font-size: 15px;
    font-weight: 500;
    margin-top: 15px;
    margin-left: 5px;
}

#score_row{
    text-align: center;
    margin-bottom: 20px;
}

.label{
    font-weight: bold;
    font-size: 25px;
    letter-spacing: 1px;
    height: 40px;
    line-height: 40px;
    background-color: rgb(0, 204, 156);
    display: inline-block;
    color: white;
    border-radius: 40px;
    padding-left: 15px;
    padding-right: 15px;
}

.outer_label{
    margin-bottom: 10px;
    margin-right: 10px;
}

.inner_label{
    margin-right: -15px;
    background-color: rgb(2, 172, 132);
}

#selection_score_container{
    display: none;
}

#multiplier_container{
    background-color: rgb(3, 145, 111);
    display: none;
}

#word_container{
    width: 100%;
    border-top: 1px solid rgb(230, 230, 230);
    display: none;
}

.word{
    display: none;
}

